[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/c.png" type="Texture" id=1]
[ext_resource path="res://Script/chooseSoda.gd" type="Script" id=2]
[ext_resource path="res://Script/CanvasLayer_calculadora.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 1 )

[node name="rigthSoda" type="Button" parent="."]
show_behind_parent = true
margin_left = 91.0
margin_top = 245.0
margin_right = 414.0
margin_bottom = 642.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wrongSoda" type="Button" parent="."]
show_behind_parent = true
margin_left = 490.0
margin_top = 241.0
margin_right = 813.0
margin_bottom = 636.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wrongSoda2" type="Button" parent="."]
show_behind_parent = true
margin_left = 887.0
margin_top = 245.0
margin_right = 1208.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="rigthSoda" to="." method="_on_rigthSoda_pressed"]
[connection signal="pressed" from="wrongSoda" to="." method="_on_wrongSoda_pressed"]
[connection signal="pressed" from="wrongSoda2" to="." method="_on_wrongSoda2_pressed"]
